# tzloc

./: CMakeLists.txt  LICENSE  README.md
include/: TimezoneLocator.hpp
src/: TimezoneLocator.cpp  serialization.hpp
tools/: embed_blob.cpp  gen_tz.cpp  pack_tzjson.cpp
